again fixed the phone quote text align

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -496,6 +496,9 @@ img {
   .home__text{
     width: 95% !important;
   }
+  .about__mean {
+    margin-left: 30%;
+  }
 
 
 }
